# EOS_DLL

./: .gitignore  EOS_DLL.sln  EOS_SDK.txt  EOS_v1_15_1_Exports_DIF.txt  EOS_v1_15_3_Exports_DIF.txt  EOS_v1_15_5_Exports_DIF.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml  main.yml  msbuild.yml
Broadcast_Server/: BServer.cs  Broadcast_Server.csproj  DiscoveryRequestPacket.cs  Program.cs  readme.txt
Broadcast_Server/Packets/: DiscoveryResponsePacket.cs  UserConnectedPacket.cs  UserDisconnectedPacket.cs
EOS_DLL/: CMakeLists.txt  EOSSDK-Win32-Shipping_native.cpp  EOSSDK-Win32-Shipping_native.h  EOSSDK-Win32-Shipping_native.lib  EOSSDK-Win64-Shipping_Export.cpp  EOSSDK-Win64-Shipping_native.cpp  EOSSDK-Win64-Shipping_native.h  EOSSDK-Win64-Shipping_native.lib  EOS_DLL.vcxproj  EOS_DLL.vcxproj.filters  Exports.cpp  MakeNewExport.py  build.txt  buildme.sh  dllmain.cpp  libEOSSDK-Linux-Shipping_native.cpp  libEOSSDK-Linux-Shipping_native.h  libEOSSDK-Mac-Shipping_native.dylib  libEOSSDK-Mac-Shipping_native.h  linux_cmake.sh  macos_cmake.sh  windows_all.sh  windows_x32_cmake.bat  windows_x64_cmake.bat
EOS_SDK/: Class1.cs  EOS_SDK - Backup.csproj  EOS_SDK.csproj  Exports.cs  Exports.cs.backup  Exports.cs.old  Functions.cs  Helpers.cs  Main.cs  Result.cs  do_better.py
EOS_SDK/Achievements/: Achievement_Handler.cs  Achievements_Exports.cs  Achievements_Handler.cs  Structs.cs  readme.txt
EOS_SDK/ActiveSession/: ActiveSession_Exports.cs  Structs.cs
EOS_SDK/AntiCheatClient/: AntiCheatClientMode.cs  AntiCheatClientViolationType.cs  AntiCheatClient_Exports.cs  Structs.cs
EOS_SDK/AntiCheatCommon/: AntiCheatCommonClientAction.cs  AntiCheatCommonClientActionReason.cs  AntiCheatCommonClientAuthStatus.cs  AntiCheatCommonClientFlags.cs  AntiCheatCommonClientInput.cs  AntiCheatCommonClientPlatform.cs  AntiCheatCommonClientType.cs  AntiCheatCommonEventParamType.cs  AntiCheatCommonEventType.cs  AntiCheatCommonPlayerMovementState.cs  AntiCheatCommonPlayerTakeDamageResult.cs  AntiCheatCommonPlayerTakeDamageSource.cs  AntiCheatCommonPlayerTakeDamageType.cs  LogEventOptions.cs  LogEventParamPair.cs  LogEventParamPairParamValue.cs  LogGameRoundEndOptions.cs  LogGameRoundStartOptions.cs  LogPlayerDespawnOptions.cs  LogPlayerReviveOptions.cs  LogPlayerSpawnOptions.cs  LogPlayerTakeDamageOptions.cs  LogPlayerTickOptions.cs  LogPlayerUseAbilityOptions.cs  LogPlayerUseWeaponData.cs  LogPlayerUseWeaponOptions.cs  OnClientActionRequiredCallbackInfo.cs  OnClientAuthStatusChangedCallbackInfo.cs  OnMessageToClientCallbackInfo.cs  Quat.cs  RegisterEventOptions.cs  RegisterEventParamDef.cs  SetClientDetailsOptions.cs  SetGameSessionIdOptions.cs  Vec3f.cs
EOS_SDK/AntiCheatServer/: AntiCheatServer_Exports.cs  Structs.cs
EOS_SDK/Auth/: AuthScopeFlags.cs  AuthTokenType.cs  Auth_Exports.cs  Auth_Handler.cs  LinkAccountFlags.cs  LoginCredentialType.cs  LoginFlags.cs  Structs.cs
EOS_SDK/Connect/: Connect_Exports.cs  Connect_Handler.cs  Structs.cs
EOS_SDK/CustomInvites/: CustomInvites_Exports.cs
EOS_SDK/Ecom/: Ecom_Exports.cs
EOS_SDK/Enums/: AuthScopeFlags.cs  AuthTokenType.cs  ExternalAccountType.cs  ExternalCredentialType.cs  LinkAccountFlags.cs  LoginCredentialType.cs  LoginFlags.cs  LoginStatus.cs  OnlineSessionState.cs  PageQuery.cs  PageResult.cs  Result.cs  Structs.cs
EOS_SDK/Friends/: Friends_Exports.cs
EOS_SDK/IntegratedPlatform/: IntegratedPlatform_Exports.cs
EOS_SDK/KWS/: KWS_Exports.cs
EOS_SDK/Leaderboards/: Leaderboards_Exports.cs
EOS_SDK/Lobby/: Lobby_Exports.cs
EOS_SDK/Logging/: LogCategory.cs  LogLevel.cs  LogMessage.cs  Logging_Exports.cs
EOS_SDK/Metrics/: Metrics_Exports.cs
EOS_SDK/Mods/: Mods_Exports.cs
EOS_SDK/Others/: Common.cs  EpicAccountId.cs  ProductUserId.cs  _Exports.cs
EOS_SDK/P2P/: P2P_Exports.cs
EOS_SDK/Platform/: ApplicationStatus.cs  DesktopCrossplayStatus.cs  NetworkStatus.cs  PlatformFlags.cs  Platform_Exports.cs  Platform_Hander.cs  Platform_Handler.cs  RTCBackgroundMode.cs  Structs.cs
EOS_SDK/PlayerDataStorage/: PlayerDataStorage_Exports.cs
EOS_SDK/Presence/: Presence_Exports.cs
EOS_SDK/ProgressionSnapshot/: ProgressionSnapshot_Exports.cs
EOS_SDK/RTC/: RTC_Exports.cs
EOS_SDK/RTCAdmin/: RTCAdmin_Exports.cs
EOS_SDK/RTCAudio/: RTCAudio_Exports.cs
EOS_SDK/RTCData/: RTCData_Exports.cs
EOS_SDK/Reports/: Reports_Exports.cs
EOS_SDK/Sanctions/: Sanctions_Exports.cs
EOS_SDK/SessionDetails/: SessionDetails_Exports.cs
EOS_SDK/SessionModification/: SessionModification_Exports.cs
dnne_fix/: readme.txt
doc/: eos.json.readme.txt
test/: Helpers.cs  LoginCallbackInfoInternal.cs  MonoPInvokeCallbackAttribute.cs  NetTEst.cs  Program.cs  TestV1.cs  TestV2.cs
(+80 files in other folders)
